# dynamic_array

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt
include/: dynamic_array.h  helpers.h
src/: main.c  memset_testing.c
tests/: test.c
